Improve link to GitHub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       In other words, it handles the edge case where RSync fails.
     </p>
     <h2>Download</h2>
-    <pre>git clone <a href="https://github.com/vog/bscp">https://github.com/vog/bscp</a>.git</pre>
+    <pre>git clone <a href="https://github.com/vog/bscp">https://github.com/vog/bscp.git</a></pre>
     <h2>Usage</h2>
     <pre>bscp SRC HOST:DEST [BLOCKSIZE] [HASH]</pre>
     <h2>Comparison</h2>
