Add links to Shasplit and Scs

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     </ul>
     <h2>See also</h2>
     <ul>
+      <li><a href="http://vog.github.io/shasplit/">Shasplit</a></li>
       <li><a href="http://www.bouncybouncy.net/programs/blocksync.py">blocksync.py</a></li>
       <li><a href="http://theshed.hezmatt.org/lvmsync/">lvmsync</a></li>
+      <li><a href="https://github.com/vog/scs">Scs</a></li>
     </ul>
   </body>
 </html>
