Add "Fork me on GitHub" ribbon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Bscp - Secure and efficient copying of block devices</title>
+    <style>
+      .ribbon {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: none;
+      }
+    </style>
   </head>
   <body>
     <h1>Bscp - Secure and efficient copying of block devices</h1>
@@ -14,7 +22,7 @@
       In other words, it handles the edge case where RSync fails.
     </p>
     <h2>Download</h2>
-    <pre>git clone <a href="https://github.com/vog/bscp">https://github.com/vog/bscp.git</a></pre>
+    <pre>git clone https://github.com/vog/bscp.git</pre>
     <h2>Usage</h2>
     <pre>bscp SRC HOST:DEST [BLOCKSIZE] [HASH]</pre>
     <h2>Comparison</h2>
@@ -44,5 +52,9 @@
       <li><a href="http://theshed.hezmatt.org/lvmsync/">lvmsync</a></li>
       <li><a href="https://github.com/vog/scs">Scs</a></li>
     </ul>
+    <a href="https://github.com/vog/shasplit" target="_blank">
+      <!-- https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png -->
+      <img class="ribbon" src="index-forkme.png" alt="Fork me on GitHub">
+    </a>
   </body>
 </html>
