--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Bscp - Secure and efficient copying of block devices</title>
     <style>
+      body {
+        font-family: sans-serif;
+        font-size: 11pt;
+        margin-left: auto;
+        margin-right: auto;
+        width: 400pt;
+      }
+      h1 {
+        font-size: 20pt;
+      }
+      h2 {
+        font-size: 16pt;
+      }
+      a {
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
       .ribbon {
         position: absolute;
         top: 0;
