--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       a:hover {
         text-decoration: underline;
       }
+      footer {
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding: 5px;
+      }
       .ribbon {
         position: absolute;
         top: 0;
@@ -71,6 +77,9 @@
       <li><a href="http://theshed.hezmatt.org/lvmsync/">lvmsync</a></li>
       <li><a href="https://github.com/vog/scs">Scs</a></li>
     </ul>
+    <footer>
+      <a href="https://njh.eu/">&#x2190; Not Just Hacking</a>
+    </footer>
     <a href="https://github.com/vog/shasplit" target="_blank">
       <!-- https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png -->
       <img class="ribbon" src="index-forkme.png" alt="Fork me on GitHub">
