Mention default values for BLOCKSIZE and HASH in documentation (#3)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <pre>git clone https://github.com/vog/bscp.git</pre>
     <h2>Usage</h2>
     <pre>bscp SRC HOST:DEST [BLOCKSIZE] [HASH]</pre>
+    <p>
+      The default <code>BLOCKSIZE</code> is <code>65536</code> (64 KiB).
+      The default <code>HASH</code> algorithm is <code>sha1</code> (SHA-1).
+    </p>
     <h2>Comparison</h2>
     <p>
       Bscp is similar to the classic
