Use logical line breaks in documentation

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         which is also configurable at command line.
       </li>
       <li>
-        The client-server protocol is designed to communicate
-        in bigger chunks, so it is more suitable to network
-        connections with bad latency.
+        The client-server protocol is designed to
+        communicate in bigger chunks,
+        so it is more suitable to
+        network connections with bad latency.
       </li>
     </ul>
     <h2>See also</h2>
