Improve wording in documentation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         DEST is allowed to be larger than SRC.
         In that case,
         SRC is copied to the beginning of DEST
-        and the end of DEST is untouched.
+        and the end of DEST remains untouched.
       </li>
       <li>
         The client-server protocol is designed to
