Link fork me ribbon to bscp
I assume shasplit is not where that link is supposed to go.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer>
       <a href="https://njh.eu/">&#x2190; Not Just Hacking</a>
     </footer>
-    <a href="https://github.com/vog/shasplit" target="_blank">
+    <a href="https://github.com/vog/bscp" target="_blank">
       <!-- https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png -->
       <img class="ribbon" src="index-forkme.png" alt="Fork me on GitHub">
     </a>
