Make project website more mobile friendly (#16)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Bscp – Secure and efficient copying of block devices</title>
     <style>
       body {
@@ -9,7 +10,7 @@
         font-size: 11pt;
         margin-left: auto;
         margin-right: auto;
-        width: 400pt;
+        max-width: 400pt;
       }
       h1 {
         font-size: 20pt;
