--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       connection, transferring only the parts that have changed.
     </p>
     <p>
-      In other words, it handles the edge case where RSync fails.
+      In other words, it handles the edge case where <a href="https://rsync.samba.org/">rsync</a> fails.
     </p>
     <h2>Download</h2>
     <pre>git clone https://github.com/bscp-tool/bscp-tool.github.io.git</pre>
     <h2>Usage</h2>
     <pre>bscp SRC HOST:DEST [BLOCKSIZE] [HASH]</pre>
     <p>The default <code>BLOCKSIZE</code> is <code>65536</code> (64 KiB).</p>
-    <p>The default <code>HASH</code> algorithm is <code>sha1</code> (SHA-1).</p>
+    <p>The default <code>HASH</code> algorithm is <code>sha1</code> (SHA-1), feel free to specify e.g. <code>sha512</code> (SHA-512) instead.</p>
     <h2>Comparison</h2>
     <p>
       Bscp is similar to the classic
@@ -52,8 +52,9 @@
         It doesn't have to be installed on server side.
       </li>
       <li>
-        It uses a stronger hash algorithm (SHA-1 instead of MD5),
-        which is also configurable at command line.
+        It uses a stronger hash algorithm (SHA-1 instead of MD5) by default,
+        and can use any strong hash algorithm supported by Python,
+        such as SHA-512 or SHA3-512.
       </li>
       <li>
         DEST is allowed to be larger than SRC.
@@ -70,14 +71,16 @@
     </ul>
     <h2>Contact</h2>
     <ul>
-      <li><a href="https://github.com/bscp-tool/bscp-tool.github.io/issues">Bscp issue tracker</a></li>
+      <li><a href="https://github.com/bscp-tool/bscp/issues">Bscp issue tracker</a></li>
     </ul>
     <h2>See also</h2>
     <ul>
       <li><a href="https://vog.github.io/shasplit">Shasplit</a></li>
+      <li><a href="https://github.com/systemd/casync">casync</a>
       <li><a href="https://www.bouncybouncy.net/programs/blocksync.py">blocksync.py</a></li>
       <li><a href="https://theshed.hezmatt.org/lvmsync/">lvmsync</a></li>
       <li><a href="https://github.com/vog/scs">Scs</a></li>
+      <li><a href="https://rsync.samba.org/">rsync</a></li>
     </ul>
   </body>
 </html>
