Switch to a shorter GitHub repository name and project domain name (#21)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       In other words, it handles the edge case where <a href="https://rsync.samba.org/">rsync</a> fails.
     </p>
     <h2>Download</h2>
-    <pre>git clone https://github.com/bscp-tool/bscp-tool.github.io.git</pre>
+    <pre>git clone https://github.com/bscp-tool/bscp</pre>
     <h2>Usage</h2>
     <pre>bscp SRC HOST:DEST [BLOCKSIZE] [HASH]</pre>
     <p>The default <code>BLOCKSIZE</code> is <code>65536</code> (64 KiB).</p>
